Added maven-source-plugin and maven-surefire-plugin to master pom.